--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -169,11 +169,11 @@
        "│ ocean_proximity │ count(ocean_proximity) │\n",
        "│     varchar     │         int64          │\n",
        "├─────────────────┼────────────────────────┤\n",
-       "│ ISLAND          │                      5 │\n",
-       "│ NEAR OCEAN      │                   2658 │\n",
-       "│ NEAR BAY        │                   2290 │\n",
        "│ <1H OCEAN       │                   9136 │\n",
        "│ INLAND          │                   6551 │\n",
+       "│ NEAR OCEAN      │                   2658 │\n",
+       "│ NEAR BAY        │                   2290 │\n",
+       "│ ISLAND          │                      5 │\n",
        "└─────────────────┴────────────────────────┘"
       ]
      },
@@ -187,6 +187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distributions of the numeric variables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -194,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da8331faa8a74487b4508a0aebc9c27d",
+       "model_id": "fb9228228f1846c7ac059dbe85ea412d",
        "version_major": 2,
        "version_minor": 1
       },
@@ -294,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10703\n"
+      "0.10824\n"
      ]
     }
    ],
@@ -319,7 +326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "558ee609d8264836b43c308a31befe0a",
+       "model_id": "5d64fdad79fe490594f310b685185801",
        "version_major": 2,
        "version_minor": 1
       },
@@ -461,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing = strat_train_set.clone()"
+    "housing = duckdb.sql('from strat_train_set')"
    ]
   },
   {
@@ -477,13 +484,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e3b3888ccaa4f848def2c16e1c5882e",
+       "model_id": "56e01d4a060e4770b20d5fc1ed9a89b5",
        "version_major": 2,
        "version_minor": 1
       },
@@ -491,7 +498,7 @@
        "JupyterChart()"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +526,7 @@
     "        clip=True,\n",
     "    ),\n",
     "    # scatter plot\n",
-    "    alt.Chart(housing).mark_circle(opacity=0.7).encode(\n",
+    "    alt.Chart(housing.pl()).mark_circle(opacity=0.7).encode(\n",
     "        alt.Color('median_house_value').scale(scheme='turbo'),\n",
     "        longitude='longitude',\n",
     "        latitude='latitude',\n",
@@ -537,8 +544,7 @@
     "                [xmin, ymax],\n",
     "                [xmax, ymax]]]},      \n",
     "        'properties': {}\n",
-    "    },\n",
-    "    # type='mercator'\n",
+    "    }\n",
     ").properties(\n",
     "    width=400,\n",
     "    height=400,\n",
@@ -556,12 +562,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can't use polars' `corr()` directly because it will return `NaN` for `total_bedrooms` due to `null` values. Instead we go the hard way to implement `corr` direcely in SQL."
+    "Let's implement `corr_column()` for duckdb tables to calculate the corralations against a given column, in this case `median_house_value`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corr_column(tbl: duckdb.DuckDBPyRelation, col: str='median_house_value') -> duckdb.DuckDBPyRelation:\n",
+    "    numeric_tbl = tbl.select_types(['double'])\n",
+    "    return duckdb.sql(f\"\"\"\n",
+    "        with long as (\n",
+    "            pivot_longer numeric_tbl on *),\n",
+    "        features as (\n",
+    "            select name as feature, list(value) as val\n",
+    "            from long\n",
+    "            group by all),\n",
+    "        t as (\n",
+    "            select f2.feature, unnest(f1.val) as v1, unnest(f2.val) as v2\n",
+    "            from features as f1 cross join features as f2\n",
+    "            where f1.feature = '{col}')\n",
+    "        select feature, corr(v1, v2)\n",
+    "        from t\n",
+    "        group by all\n",
+    "        order by 2 desc\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -583,31 +615,13 @@
        "└────────────────────┴────────────────────────┘"
       ]
      },
-     "execution_count": 433,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "duckdb.sql(\"\"\"\n",
-    "    with long as (\n",
-    "        pivot_longer (\n",
-    "            select * exclude (ocean_proximity)\n",
-    "            from housing)\n",
-    "        on columns(*)),\n",
-    "    features as (\n",
-    "        select name as feature, list(value) as val\n",
-    "        from long\n",
-    "        group by all),\n",
-    "    t as (\n",
-    "        select f2.feature, unnest(f1.val) as v1, unnest(f2.val) as v2\n",
-    "        from features as f1 cross join features as f2\n",
-    "        where f1.feature = 'median_house_value')\n",
-    "    select feature, corr(v1, v2)\n",
-    "    from t\n",
-    "    group by all\n",
-    "    order by 2 desc\n",
-    "    \"\"\")"
+    "corr_column(housing)"
    ]
   },
   {
@@ -626,13 +640,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adc44baf3b424c4aaf3c2da0a6ee4d26",
+       "model_id": "e7ad85897f7f4767b62ca68cb61d7565",
        "version_major": 2,
        "version_minor": 1
       },
@@ -640,7 +654,7 @@
        "JupyterChart()"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +663,7 @@
     "attributes = [\"median_house_value\", \"median_income\", \"total_rooms\",\n",
     "              \"housing_median_age\"]\n",
     "\n",
-    "alt.Chart(housing).mark_circle(size=1).encode(\n",
+    "alt.Chart(housing.pl()).mark_circle(size=1).encode(\n",
     "    alt.X(alt.repeat('column'), type='quantitative').axis(labels=False, ticks=False, grid=False),\n",
     "    alt.Y(alt.repeat('row'), type='quantitative').axis(labels=False, ticks=False, grid=False)\n",
     ").properties(\n",
@@ -662,14 +676,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 474,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "And zoom on median_income, the one with the most conspicuous correlation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bde56020635f4702b3f9b08c346da8b0",
+       "model_id": "e250fb998768424ca3b46e2d7c05a9a7",
        "version_major": 2,
        "version_minor": 1
       },
@@ -677,13 +700,13 @@
        "JupyterChart()"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alt.Chart(housing).mark_circle(opacity=0.1).encode(\n",
+    "alt.Chart(housing.pl()).mark_circle(opacity=0.1).encode(\n",
     "    x=\"median_income\",\n",
     "    y=\"median_house_value\"\n",
     ").properties(width=400, height=300)"
@@ -698,46 +721,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing[\"rooms_per_house\"] = housing[\"total_rooms\"] / housing[\"households\"]\n",
-    "housing[\"bedrooms_ratio\"] = housing[\"total_bedrooms\"] / housing[\"total_rooms\"]\n",
-    "housing[\"people_per_house\"] = housing[\"population\"] / housing[\"households\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "median_house_value    1.000000\n",
-       "median_income         0.688380\n",
-       "rooms_per_house       0.143663\n",
-       "total_rooms           0.137455\n",
-       "housing_median_age    0.102175\n",
-       "households            0.071426\n",
-       "total_bedrooms        0.054635\n",
-       "population           -0.020153\n",
-       "people_per_house     -0.038224\n",
-       "longitude            -0.050859\n",
-       "latitude             -0.139584\n",
-       "bedrooms_ratio       -0.256397\n",
-       "Name: median_house_value, dtype: float64"
+       "┌────────────────────┬────────────────────────┐\n",
+       "│      feature       │      corr(v1, v2)      │\n",
+       "│      varchar       │         double         │\n",
+       "├────────────────────┼────────────────────────┤\n",
+       "│ median_house_value │                    1.0 │\n",
+       "│ median_income      │     0.6892848095214267 │\n",
+       "│ rooms_per_house    │    0.15765757924288218 │\n",
+       "│ total_rooms        │    0.13824805215288422 │\n",
+       "│ housing_median_age │    0.10710965505979853 │\n",
+       "│ households         │    0.07069738815904739 │\n",
+       "│ total_bedrooms     │ -0.0045976737173313645 │\n",
+       "│ bedrooms_ratio     │  -0.014843536490588569 │\n",
+       "│ people_per_house   │  -0.020782073580930902 │\n",
+       "│ population         │   -0.02285481779231049 │\n",
+       "│ longitude          │  -0.050123498414057804 │\n",
+       "│ latitude           │   -0.14074538721871233 │\n",
+       "├────────────────────┴────────────────────────┤\n",
+       "│ 12 rows                           2 columns │\n",
+       "└─────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corr_matrix = housing.corr(numeric_only=True)\n",
-    "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
+    "housing = housing.project(\"\"\" *,\n",
+    "    total_rooms / households as rooms_per_house,\n",
+    "    total_bedrooms / total_rooms as bedrooms_ratio,\n",
+    "    population / households as people_per_house\n",
+    "\"\"\")\n",
+    "corr_column(housing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- TODO: the correlation with `bedrooms_ratio` (-0.014) is not as big in the book (-0.25)."
    ]
   },
   {
@@ -751,17 +780,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's revert to the original training set and separate the target (note that `strat_train_set.drop()` creates a copy of `strat_train_set` without the column, it doesn't actually modify `strat_train_set` itself, unless you pass `inplace=True`):"
+    "Let's revert to the original training set and separate the target."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
-    "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+    "housing = duckdb.sql('select * exclude median_house_value from strat_train_set')\n",
+    "housing_labels = duckdb.sql('select median_house_value from strat_train_set')"
    ]
   },
   {
@@ -5647,7 +5676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lab-home-wtptIbf4-py3.12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
