convert ch01 to marimo

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -1233,6 +1233,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Prefer `OneHotEncoder` to pandas' `get_dummies()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature Scaling"
    ]
   },
@@ -4583,7 +4590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab-home-wtptIbf4-py3.12",
    "language": "python",
    "name": "python3"
   },
